[gd_scene load_steps=34 format=3 uid="uid://btc8w3jag5lxq"]

[ext_resource type="Script" uid="uid://wpd8r4nf8hnk" path="res://main.gd" id="1_0xm2m"]
[ext_resource type="Script" uid="uid://cfgynoh1tltiq" path="res://spawn_manager.gd" id="1_ig7tw"]
[ext_resource type="Script" uid="uid://b803w4ch360j8" path="res://ui.gd" id="2_272bh"]
[ext_resource type="PackedScene" uid="uid://dm86n0fcjee4r" path="res://components/UITextureButton.tscn" id="3_4c57u"]
[ext_resource type="Texture2D" uid="uid://1ylw41eu8sr3" path="res://images/pause.png" id="3_5vw27"]
[ext_resource type="Script" uid="uid://dswauw5q2suwa" path="res://label_fps.gd" id="3_82xsv"]
[ext_resource type="Script" path="res://components/BoingComponent.gd" id="4_kek77"]
[ext_resource type="PackedScene" uid="uid://bt5yvtupjskyu" path="res://components/UIButton.tscn" id="5_efxa6"]
[ext_resource type="StyleBox" uid="uid://lsn48mo682dy" path="res://styles/button_flat.tres" id="5_w48qg"]
[ext_resource type="Theme" uid="uid://buorrie1vc8nq" path="res://styles/toomuchazucar_theme.tres" id="6_vivmo"]
[ext_resource type="Texture2D" uid="uid://bjqpy8aogdxad" path="res://images/escenario/TO_MUCH_AZUCAR_BG_1.png" id="9_82xsv"]
[ext_resource type="Texture2D" uid="uid://ck5ow6acqax86" path="res://images/escenario/TO_MUCH_AZUCAR_LIGHT_1.png" id="10_getpj"]
[ext_resource type="Texture2D" uid="uid://dwjf7mok2chq" path="res://images/indicator.png" id="11_dg77c"]
[ext_resource type="SpriteFrames" uid="uid://b246qkxiwi7mu" path="res://images/other_dancers_animation.tres" id="13_074og"]
[ext_resource type="Texture2D" uid="uid://bfmske6niteei" path="res://images/escenario/TO_MUCH_AZUCAR_0011_DANCE_BASE_1.png" id="15_074og"]
[ext_resource type="Texture2D" uid="uid://crh5if0q0xk7i" path="res://images/escenario/TO_MUCH_AZUCAR_0010_DANCE_BASE_2-copia.png" id="15_ryguw"]
[ext_resource type="Texture2D" uid="uid://daty3ny5cgtdt" path="res://images/escenario/TO_MUCH_AZUCAR_STAGE_1.png" id="15_yaehf"]
[ext_resource type="Texture2D" uid="uid://duwlcikjja84l" path="res://images/escenario/TO_MUCH_AZUCAR_0003_DANCE_SPECIAL_B_1.png" id="17_0odxb"]
[ext_resource type="Texture2D" uid="uid://bkcedqxtsyl06" path="res://images/escenario/TO_MUCH_AZUCAR_PEOPLE_1.png" id="17_1u8w0"]
[ext_resource type="Texture2D" uid="uid://ha4pldgakyxs" path="res://images/escenario/TO_MUCH_AZUCAR_0007_DANCE_ERROR_1.png" id="17_kq58d"]
[ext_resource type="Texture2D" uid="uid://biaqoqghwfkri" path="res://images/escenario/TO_MUCH_AZUCAR_PEOPLE_2.png" id="18_0odxb"]
[ext_resource type="Texture2D" uid="uid://65fcid2xrfig" path="res://images/escenario/TO_MUCH_AZUCAR_0002_DANCE_SPECIAL_B_2.png" id="18_lswn8"]
[ext_resource type="Texture2D" uid="uid://64k3ckkejwy1" path="res://images/escenario/TO_MUCH_AZUCAR_0006_DANCE_ERROR_2.png" id="18_seu75"]
[ext_resource type="Texture2D" uid="uid://dxjg8f2flgksb" path="res://images/escenario/TO_MUCH_AZUCAR_0001_DANCE_SPECIAL_C_1.png" id="19_a6jrf"]
[ext_resource type="Texture2D" uid="uid://ocli1dbxk0k1" path="res://images/escenario/TO_MUCH_AZUCAR_0005_DANCE_SPECIAL_A_1.png" id="19_htxhm"]
[ext_resource type="Texture2D" uid="uid://dxljveh73pso7" path="res://images/escenario/TO_MUCH_AZUCAR_0004_DANCE_SPECIAL_A_2.png" id="20_jq2sk"]
[ext_resource type="Texture2D" uid="uid://dgts8r4etjh8w" path="res://images/escenario/TO_MUCH_AZUCAR_0000_DANCE_SPECIAL_C_2.png" id="20_xuqvo"]
[ext_resource type="Texture2D" uid="uid://bbnjmblem67a2" path="res://images/escenario/TO_MUCH_AZUCAR_0009_DANCE_WALK_1.png" id="25_4k2k6"]
[ext_resource type="Texture2D" uid="uid://c54hncyr3x4r5" path="res://images/escenario/TO_MUCH_AZUCAR_0008_DANCE_WALK_2.png" id="26_0rl1p"]
[ext_resource type="Texture2D" uid="uid://ymrp4oyxvn25" path="res://images/escenario/TO_MUCH_AZUCAR_COURTAIN.png" id="29_seu75"]
[ext_resource type="Script" uid="uid://jge47yesdpa6" path="res://components/Ticker.gd" id="31_seu75"]

[sub_resource type="SpriteFrames" id="SpriteFrames_lswn8"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_1u8w0")
}, {
"duration": 1.0,
"texture": ExtResource("18_0odxb")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_4c57u"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_ryguw")
}, {
"duration": 1.0,
"texture": ExtResource("15_074og")
}],
"loop": true,
"name": &"default",
"speed": 1.67
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_kq58d")
}, {
"duration": 1.0,
"texture": ExtResource("18_seu75")
}],
"loop": false,
"name": &"error",
"speed": 1.67
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_htxhm")
}, {
"duration": 1.0,
"texture": ExtResource("20_jq2sk")
}],
"loop": false,
"name": &"special_a",
"speed": 1.67
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("17_0odxb")
}, {
"duration": 1.0,
"texture": ExtResource("18_lswn8")
}],
"loop": false,
"name": &"special_b",
"speed": 1.67
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_a6jrf")
}, {
"duration": 1.0,
"texture": ExtResource("20_xuqvo")
}],
"loop": false,
"name": &"special_c",
"speed": 1.67
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("25_4k2k6")
}, {
"duration": 1.0,
"texture": ExtResource("26_0rl1p")
}],
"loop": false,
"name": &"walk",
"speed": 1.67
}]

[node name="Main" type="Node"]
script = ExtResource("1_0xm2m")
metadata/_edit_vertical_guides_ = [-952.0]
metadata/_edit_horizontal_guides_ = [-336.0, 336.0]

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("2_272bh")

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 22

[node name="ScoreLabel" type="Label" parent="CanvasLayer/UI/MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="CanvasLayer/UI/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "60"
script = ExtResource("3_82xsv")

[node name="UiButton" parent="CanvasLayer/UI/MarginContainer" instance=ExtResource("3_4c57u")]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture_normal = ExtResource("3_5vw27")

[node name="Label" type="Label" parent="CanvasLayer/UI/MarginContainer"]
layout_mode = 2

[node name="PauseContainer" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -51.0
offset_right = 96.0
offset_bottom = 51.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1e-05, 1e-05)
pivot_offset = Vector2(96, 51)

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/PauseContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -182.0
offset_top = -82.0
offset_right = 182.0
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("5_w48qg")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PauseContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 22
theme_override_constants/margin_top = 22
theme_override_constants/margin_right = 22
theme_override_constants/margin_bottom = 22

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseContainer/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="Label" type="Label" parent="CanvasLayer/PauseContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("6_vivmo")
theme_override_font_sizes/font_size = 48
text = "PAUSA"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PauseContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 22

[node name="ContinueUiButton" parent="CanvasLayer/PauseContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_efxa6")]
custom_minimum_size = Vector2(220, 0)
layout_mode = 2
text = "CONTINUAR"

[node name="ExitUiButton" parent="CanvasLayer/PauseContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("5_efxa6")]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
text = "SALIR"

[node name="BoingComponent" type="Node" parent="CanvasLayer/PauseContainer"]
script = ExtResource("4_kek77")

[node name="SubtitlesLabel" type="RichTextLabel" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -23.0
grow_horizontal = 2
grow_vertical = 0
size_flags_vertical = 8
bbcode_enabled = true
scroll_active = false
horizontal_alignment = 1
vertical_alignment = 1

[node name="Game" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="Game"]
position = Vector2(0, -7.62939e-06)

[node name="BackgroundSprite" type="Sprite2D" parent="Game"]
position = Vector2(-2.74181e-05, -105.435)
scale = Vector2(0.538104, 0.357448)
texture = ExtResource("9_82xsv")

[node name="LigthSprite" type="Sprite2D" parent="Game"]
position = Vector2(-3.8147e-06, -76)
scale = Vector2(0.406069, 0.406069)
texture = ExtResource("10_getpj")

[node name="Public" type="AnimatedSprite2D" parent="Game"]
position = Vector2(-2.09808e-05, 185)
scale = Vector2(0.538104, 0.53)
sprite_frames = SubResource("SpriteFrames_lswn8")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="Game"]
position = Vector2(-427, 66.1591)
scale = Vector2(0.237805, 0.237805)
sprite_frames = ExtResource("13_074og")
autoplay = "default"

[node name="AnimatedSprite2D3" type="AnimatedSprite2D" parent="Game"]
position = Vector2(400, 66.1591)
scale = Vector2(0.237805, 0.237805)
sprite_frames = ExtResource("13_074og")
autoplay = "default"

[node name="Dancers" type="AnimatedSprite2D" parent="Game"]
position = Vector2(-3.8147e-06, -25)
scale = Vector2(0.416159, 0.416159)
sprite_frames = SubResource("SpriteFrames_4c57u")
animation = &"error"
autoplay = "default"

[node name="StageBackground" type="Sprite2D" parent="Game"]
position = Vector2(4.76837e-07, 250)
scale = Vector2(0.537639, 0.588418)
texture = ExtResource("15_yaehf")

[node name="Center" type="Sprite2D" parent="Game"]
position = Vector2(0, 235)
texture = ExtResource("11_dg77c")
region_enabled = true
region_rect = Rect2(0, 0, 100, 100)

[node name="Marker2D" type="Marker2D" parent="Game/Center"]

[node name="Curtain" type="Sprite2D" parent="Game"]
position = Vector2(1, -274.5)
scale = Vector2(0.53745, 0.408916)
texture = ExtResource("29_seu75")

[node name="SpawnManager" type="Node2D" parent="Game"]
unique_name_in_owner = true
script = ExtResource("1_ig7tw")
color_left = Color(1, 0.713726, 0.92549, 1)
color_right = Color(0, 0.701961, 0.933333, 1)

[node name="SpawnerLeft" type="Marker2D" parent="Game/SpawnManager"]
position = Vector2(-600, 235)

[node name="SpawnerRight" type="Marker2D" parent="Game/SpawnManager"]
position = Vector2(600, 235)

[node name="Ticker" type="Node" parent="."]
script = ExtResource("31_seu75")
metadata/_custom_type_script = "uid://jge47yesdpa6"

[connection signal="tree_exited" from="." to="." method="_on_tree_exited"]
[connection signal="pressed" from="CanvasLayer/UI/MarginContainer/UiButton" to="CanvasLayer" method="show_pause"]
[connection signal="pressed" from="CanvasLayer/PauseContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ContinueUiButton" to="CanvasLayer" method="hide_pause"]
[connection signal="pressed" from="CanvasLayer/PauseContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/ExitUiButton" to="." method="_on_exit_button_pressed"]
[connection signal="on_tick_ticked" from="Ticker" to="." method="_on_tick_ticked"]
